--- a/pp.css
+++ b/pp.css
@@ -24,7 +24,7 @@ body {
 
 .feature {
 	background: rgba(0, 0, 0, 0.6) !important;
-	color: #000000 !important;
+	color: #105a55 !important;
 	border: none !important;
 	border-radius: 5px !important;
 }
@@ -36,21 +36,21 @@ body {
 	background: rgba(0, 0, 0, 0.6);
 	border: none;
 	border-top: none;
-	color: #000000;
+	color: #105a55;
 	border-radius: 5px;
-	font-family: FONT CSS HERE;
+	font-family: 'Inconsolata', monospace;
 }
 
 .navbar {
 	background: rgba(0, 0, 0, 0.6);
 	border-bottom: none;
-	font-family: FONT CSS HERE;
-	color: #000000;
+	font-family: 'Inconsolata', monospace;
+	color: #105a55;
 	border-radius: 5px;
 }
 
 .navbar li a {
-	color: #000000 !important;
+	color: #699c76 !important;
 }
 
 /* NAVBAR HOVER COLOR */
@@ -83,7 +83,7 @@ body {
 }
 
 .breadcrumb .active {
-	color: #000000;
+	color: #699c76;
 }
 
 
@@ -92,13 +92,13 @@ body {
 .alert {
 	background: rgba(0, 0, 0, 0.6);
 	border: none;
-	color: #000000;
+	color: #699c76;
 }
 
 .alert-warning,
 .alert-danger {
 	background: rgba(0, 0, 0, 0.6);
-	color: #000000;
+	color: #699c76;
 }
 
 
@@ -117,48 +117,48 @@ div.left {
 	background: rgba(0, 0, 0, 0.6) !important;
 	box-shadow: none !important;
 	border: none !important;
-	color: #000000 !important;
+	color: #acc886 !important;
 }
 
 /* ENERGY BAR BACKGROUND */
 .progress {
 	background: rgba(0, 0, 0, 0.6);
-	color: #000000 !important;
+	color: #acc886 !important;
 }
 
 /* ENERGY BAR TEXT */
 .progress div {
-	color: #000000 !important;
+	color: #acc886 !important;
 }
 
 /* ENERGY BAR COLOR */
 .progress-bar {
 	background: rgba(0, 0, 0, 0.6);
-	color: #000000 !important;
+	color: #acc886 !important;
 }
 
 
 /* CHAT */
 
 .s-chat-message:nth-child(even) {
-	background: #000000 !important;
+	background: #acc886 !important;
 	border: none !important;
 }
 
 .s-chat-message:nth-child(odd) {
-	background: #000000 !important;
+	background: #acc886 !important;
 	border: none !important;
 }
 
 /* PINNED MESSAGE */
 .s-chat-message__pinned {
-	background: #000000 !important;
-	color: #000000 !important;
+	background: #acc886 !important;
+	color: 	#105a55 !important;
 	border: none !important;
 }
 
 .s-chat-message_timestamp {
-	color: #000000 !important;
+	color: 	#105a55 !important;
 }
 
 div#chatMessageContainer {
@@ -168,14 +168,14 @@ div#chatMessageContainer {
 /* CURRENT CHANNEL TAB (MAIN, SALES, ETC.) */
 button#label_currentChannel {
 	border: none !important;
-	background: #000000 !important;
+	background: #105a55 !important;
 }
 
 
 /* BIGGEST HEADER ("___"'s DEN) */
 
 h1 {
-	color: #000000;
+	color: #105a55;
 	font-size: 72px;
 	text-align: center;
 }
@@ -184,7 +184,7 @@ h1 {
 /* MEDIUM HEADER */
 
 h2 {
-	color: #000000;
+	color: 	#105a55;
 	font-size: 24px;
 	text-align: center;
 }
@@ -193,7 +193,7 @@ h2 {
 /* SMALL HEADER */
 
 h3 {
-	color: #000000 !important;
+	color: 	#105a55 !important;
 	font-size: 14px !important
 }
 
